# lucky-cat

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1fd9ad707588_finalize_schemas.py  2720c783f85c_transaction_tables_schema_v2.py  2e072dece469_.py  d7f8b5f12e32_added_position_tables.py  e2bda7310205_added_a_new_field_count.py  e49ce8e4fe81_transaction_tables_schema_v1.py
lucky_cat/: __init__.py  entrypoint.py
lucky_cat/analyzer/: __init__.py  basicanalyzer.py  downhugline.py  downpregantline.py  downswallow.py  downswallowext.py  hammerline.py  hammerwire.py  hangline.py  meteorline.py  reversehammerline.py  swallow.py  swallowext.py  uphugline.py  uppregnantline.py  upswallow.py  upswallowext.py
lucky_cat/analyzer/assist_indicators/: bollinger_bands.py  moving_average.py  rsi.py
lucky_cat/common/candlestick/: candlestick.py
lucky_cat/common/utils/: helper.py
lucky_cat/crypto_currency/: data_loader.py  data_loader_v2.py
lucky_cat/crypto_currency/ETH/: eth.py
lucky_cat/history/: __init__.py
lucky_cat/history/editor/: notebook.py  stock_editor.py  transaction_editor.py
lucky_cat/history/position/: position.py
lucky_cat/news/popular/: popular.py
lucky_cat/predictor/: basepredictor.py  machinelearningpredictor.py  predictresult.py  simplehistorypredictor.py
lucky_cat/visualizer/: play_ground.py  simple_history_visualizer.py
tests/: test_lucky_cat.py
tests/analyzer/: testswallow.py
tests/common/utils/: testhelper.py
