[tool.poetry]
name = "lucky-cat"
version = "0.1.0"
description = ""
authors = ["tianru zhou <tianr.zhou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
plotly = "^5.1.0"
pyrh = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
