[tool.poetry]
name = "lucky-cat"
version = "0.1.0"
description = ""
authors = ["tianru zhou <tianr.zhou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
plotly = "^5.3.1"
pyrh = "^2.0"
sqlalchemy = "^1.4.23"
SQLAlchemy-Utils = "^0.37.8"
yfinance = "^0.1.63"
configparser = "^5.0.2"
PyMySQL = "^1.0.2"
cryptography = "^35.0.0"
alembic = "1.6.0"
abcplus = "^0.1.0"
overrides = "^6.1.0"
pandas-datareader = "^0.10.0"
html5lib = "^1.1"
bs4 = "^0.0.1"
bitfinex-tencars = "^0.0.3"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
